[gd_scene load_steps=9 format=3 uid="uid://dmthcbtlrqmvk"]

[ext_resource type="Script" path="res://Scripts/button.gd" id="1_eidpk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qbx3j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lm8rp"]
bg_color = Color(0.523333, 0.48, 1, 0.686275)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c66rf"]
bg_color = Color(0.968627, 0.396078, 1, 0.709804)

[sub_resource type="Animation" id="Animation_0pyw2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("button:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_27y4d"]
resource_name = "fade_out"
length = 0.14
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("button:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_6d7er"]
resource_name = "select_in"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:value")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 100.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ip058"]
_data = {
"RESET": SubResource("Animation_0pyw2"),
"fade_out": SubResource("Animation_27y4d"),
"select_in": SubResource("Animation_6d7er")
}

[node name="ProgressBar" type="ProgressBar" groups=["button"]]
custom_minimum_size = Vector2(300, 25)
offset_right = 185.0
offset_bottom = 25.0
size_flags_horizontal = 4
theme_override_styles/background = SubResource("StyleBoxEmpty_qbx3j")
theme_override_styles/fill = SubResource("StyleBoxFlat_lm8rp")
show_percentage = false

[node name="button" type="Button" parent="." groups=["button"]]
modulate = Color(0.301961, 0.109804, 0.321569, 1)
custom_minimum_size = Vector2(300, 25)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -87.5
offset_top = -12.5
offset_right = 87.5
offset_bottom = 12.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/focus = SubResource("StyleBoxFlat_c66rf")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_c66rf")
theme_override_styles/disabled = SubResource("StyleBoxFlat_c66rf")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_c66rf")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_c66rf")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_c66rf")
theme_override_styles/hover = SubResource("StyleBoxFlat_c66rf")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_c66rf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_c66rf")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_c66rf")
theme_override_styles/normal = SubResource("StyleBoxFlat_c66rf")
script = ExtResource("1_eidpk")

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ip058")
}

[connection signal="focus_entered" from="button" to="button" method="_on_focus_entered"]
[connection signal="focus_exited" from="button" to="button" method="_on_focus_exited"]
[connection signal="pressed" from="button" to="button" method="_on_pressed"]
